--- a/src/about/timeline/__content/timeline__content.scss
+++ b/src/about/timeline/__content/timeline__content.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   font-weight: 500;
-  margin-top: 25px;
+  margin-top: 30px;
   max-width: 1000px;
   overflow-x: hidden;
   width: calc(100vw - 60px);
